tests/specs/check/npm_pkg_empty_main_entry/check.out
Check file:///[WILDLINE]/index.ts
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const result: string = add(1, 2);
      ~~~~~~
    at file:///[WILDLINE]/index.ts:4:7
